WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204298
Promote main thread assertions related to sendWithAsyncReply() to be release assertions
https://bugs.webkit.org/show_bug.cgi?id=204298
Summary
Promote main thread assertions related to sendWithAsyncReply() to be release ...
Chris Dumez
Reported
2019-11-18 09:17:34 PST
Promote main thread assertions related to sendWithAsyncReply() to be release assertions, to help identify threading bugs such as <
rdar://problem/57231170
>.
Attachments
Patch
(2.56 KB, patch)
2019-11-18 09:20 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-11-18 09:20:29 PST
Created
attachment 383753
[details]
Patch
Wenson Hsieh
Comment 2
2019-11-18 09:25:10 PST
Comment on
attachment 383753
[details]
Patch r=mews
WebKit Commit Bot
Comment 3
2019-11-18 15:59:26 PST
Comment on
attachment 383753
[details]
Patch Clearing flags on attachment: 383753 Committed
r252605
: <
https://trac.webkit.org/changeset/252605
>
WebKit Commit Bot
Comment 4
2019-11-18 15:59:30 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-11-18 16:00:20 PST
<
rdar://problem/57302825
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug