Promote main thread assertions related to sendWithAsyncReply() to be release assertions https://bugs.webkit.org/show_bug.cgi?id=204298

Reviewed by Wenson Hsieh.

Promote main thread assertions related to sendWithAsyncReply() to be release assertions, to help identify
threading bugs such as <rdar://problem/57231170>.

* Platform/IPC/Connection.cpp:
(IPC::addAsyncReplyHandler):
(IPC::clearAsyncReplyHandlers):
(IPC::CompletionHandler<void):


Canonical link: https://commits.webkit.org/217603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252605 268f45cc-cd09-0410-ab3c-d52691b4dbfc